force-app/main/default/objects/OTP__c/fields/Expiration_Time__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Time__c</fullName>
    <formula>CreatedDate + (2.0 / 1440)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiration Time</label>
    <type>DateTime</type>
</CustomField>