force-app/main/default/objects/OTP__c/fields/IsValid__c.field-meta.xml
<CustomField>
    <fullName>IsValid__c</fullName>
    <formula>IF(
    NOW() &gt; (CreatedDate + (5.0 / 1440)),
    FALSE,
    TRUE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valid?</label>
    <type>Checkbox</type>
</CustomField>