force-app/main/default/objects/OTP__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <externalId>true</externalId>
    <label>Phone</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>