force-app/main/default/objects/OTP__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <columns>Phone__c</columns>
    <columns>OTP__c</columns>
    <columns>Expiration_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>